Refactor and commented on the code